examples/exploit-examples/klee-out-0/test000001.exec.err
Error: AEG: Find a possible exploit
File: t1.c
Line: 96
assembly.ll line: 8937
Stack: 
	#000008937 in __klee_posix_wrapped_main (=1, =93825069026432) at t1.c:96
	#100007095 in __user_main (=1, =93825040170496, =93825040170512) at runtime/POSIX/klee_init_env.c:245
	#200000545 in __uClibc_main (=93825040581128, =1, =93825040170496, =0, =0, =0, =0) at libc/misc/internals/__uClibc_main.c:401
	#300000710 in main (=1, =93825040170496)
